--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -1,20 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <title>Poll website</title>
 </head>
 <body>
-    <h1>Welcome to the Polls App</h1>
-    <p>This is the home page of the Polls application.</p>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Polls App</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'home' %}">Home Page</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'your_polls' %}">Your Polls</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'your_answers' %}">Your Answers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'your_account' %}">Your Account</a>
+            </li>
+        </ul>
+      <ul class="navbar-nav ml-auto">
+    {% if user.is_authenticated %}
+        <li class="nav-item">
+            <span class="navbar-text mr-3">Welcome <b>{{ user.username }}</b></span>
+        </li>
+        <li class="nav-item">
+            <form action="{% url 'logout' %}" method="post" style="display: inline;">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-outline-danger nav-link" style="color: black; outline-width: medium">Logout</button>
+            </form>
+        </li>
+    {% else %}
+        <li class="nav-item">
+            <a class="btn btn-primary nav-link text-white" href="{% url 'login' %}">Login</a>
+        </li>
+    {% endif %}
+    </ul>
+    </div>
+</nav>
 
-    <div id="content" name ="content">
+    <div id="content" name="content" class="container mt-4">
         {% block content %}
         {% endblock %}
     </div>
 
-    <footer>
-        <p>&copy; 2023 Polls App</p>
-    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
